syntax = "proto3";

package com.aws.protobuf;
option java_outer_classname = "DealMessages";

message ExecutedDealMessage {
  int64 deal_id = 1;
  int64 buy_order_id = 2;
  int64 sale_order_id = 3;
  int64 count = 4;
  string lot_price = 5;

}

message ErrorDealMessage {
  int64 deal_id = 1;
  int64 buy_order_id = 2;
  int64 sale_order_id = 3;
  string description = 4;
}